...
        )}
      </View>
    );
  };

  return (
    <ThemedContainer style={styles.container} testID="items-screen">
      <CollapsibleHeader
        title={getFilterTitle()}
        scrollY={scrollY}
        showNavigationHeader={true}
        alwaysVisible={true}
      />
      <ThemedView style={styles.stepContainer}>
        {/* FAB */}
        <RobustPressable style={styles.fab} onPress={handleAddItem} testID="add-item-button">
          <MaterialIcons name="add" style={styles.fabIcon} />
        </RobustPressable>

        {/* Item list */}
        <Animated.FlatList
          ref={flatListRef}
          testID="items-list"
          data={isLoadingItems ? Array(4).fill(null) : sortedItems}
          keyExtractor={(itm, index) => itm?.Id ?? `skeleton-${index}`}
          keyboardShouldPersistTaps='handled'
          onScroll={Animated.event(
            [{ nativeEvent: { contentOffset: { y: scrollY } } }],
            { useNativeDriver: true }
...
